<resources>
    <string name="app_name">Wireless Advocates</string>
    <string name="tab_text_1">Verizon</string>
    <string name="tab_text_2">AT&amp;T</string>
    <string name="tab_txt_3">T-Mobile</string>
    <string name="rate_plans">Rate Plans</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="website">Website</string>
    <string name="coverage_map">Coverage Map</string>
    <string name="_5g_map">5G Map</string>
    <string name="description">Description</string>
    <string name="military_plans">Military Plans</string>
    <string name="att_support">Support (888) 355-2518</string>
    <string name="verizon_support">Support (866) 338-7390</string>
    <string name="tmobile_support">Support (888) 310-8369</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="carrier">Carrier</string>
    <string name="bill_calculator">Bill Calculator</string>
    <string name="plan">Plan</string>
    <string name="lines">Lines</string>
    <string name="cancel">Cancel</string>
    <string name="calculate">Calculate</string>
    <string name="phone_price">Phone(s) Price</string>
    <string name="promotions">Promotions</string>
    <string name="default_value">0.00</string>
</resources>
