<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TMobileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <Button
                android:textAppearance="?attr/textAppearanceButton"
                android:textSize="32sp"
                android:id="@+id/tmobile_website"
                android:text="@string/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:textAppearance="?attr/textAppearanceButton"
                android:textSize="32sp"
                android:id="@+id/tmobile_plans"
                android:text="@string/rate_plans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:textAppearance="?attr/textAppearanceButton"
                android:textSize="32sp"
                android:id="@+id/tmobile_military_plans"
                android:text="@string/military_plans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:textAppearance="?attr/textAppearanceButton"
                android:textSize="32sp"
                android:id="@+id/tmobile_coverage_map"
                android:text="@string/coverage_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:textAppearance="?attr/textAppearanceButton"
                android:textSize="32sp"
                android:id="@+id/tmobile_5g_coverage_map"
                android:text="@string/_5g_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:textAppearance="?attr/textAppearanceButton"
                android:textSize="32sp"
                android:id="@+id/tmobile_description"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:textAppearance="?attr/textAppearanceButton"
                android:textSize="32sp"
                android:id="@+id/tmobile_support"
                android:text="@string/tmobile_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>